<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="673dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lightSystemTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/light_system"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/lightSystemDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:background="?android:attr/listDivider" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/ledSwitch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:minHeight="48dp"
            android:text="@string/led1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/ledSwitch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:minHeight="48dp"
            android:text="@string/led2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ledSwitch1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ledSwitch2">

            <LinearLayout
                android:id="@+id/led3Box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/led4Box"
                app:layout_constraintTop_toBottomOf="@+id/ledSwitch2">

                <Button
                    android:id="@+id/btnIncCounterLed3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/increase"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/counterLed3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/counter"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btnDecCounterLed3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/decrease"
                    android:textColor="#795548" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/led4Box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnIncCounterLed4"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/increase" />

                <TextView
                    android:id="@+id/counterLed4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/counter"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btnDecCounterLed4"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/decrease"
                    android:textColor="#795548" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/lightSystemTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/irrigation_system"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/lightSystemDivider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="99dp">

            <Button
                android:id="@+id/btnIncIrrigationSpeed"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="28dp"
                android:text="@string/increase"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.51"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/countIrrigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/counter"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnIncIrrigationSpeed"
                app:layout_constraintStart_toEndOf="@+id/btnDecIrrigationSpeed"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnDecIrrigationSpeed"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="148dp"
                android:text="@string/decrease"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.894"
                app:layout_constraintStart_toEndOf="@+id/switchIrrigation"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.51"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchIrrigation"
                android:layout_width="138dp"
                android:layout_height="52dp"
                android:layout_margin="15sp"
                android:minHeight="48dp"
                android:text="@string/irrigation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnIncIrrigationSpeed"
                app:layout_constraintHorizontal_bias="0.126"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.468" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="221dp">

            <Button
                android:id="@+id/manualControl"
                android:layout_width="130dp"
                android:layout_height="80dp"
                android:text="@string/manual"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>